# Product-Docker

./: .gitignore  CMakeLists.txt  CODEOWNERS  Jenkinsfile  Jenkinsfile-CalculateInstallTime  Jenkinsfile-Eddie-Master  Jenkinsfile-PR  Jenkinsfile-Professor-CI  Jenkinsfile-Taylor-Master  Jenkinsfile-product  JenkinsfileProductPackaging.groovy  Jenkinsfile_nightly  Makefile  Makefile_new  README.md  Settings.cmake  Settings.mk  Shepherd-avs.xml  build-all  collect-deployables  components (another copy).json  components (copy).json  components.json  conanfile.py  depends.json  features.json  ipks.txt  lpm_package.xml  make-product-package  package_names.txt  set-versions  superbuild.json  testrailsettings.cfg  version.txt
LpmUtils/: CMakeLists.txt  PlatformReset.cpp  ReadLpmVersion.cpp
PlatformReset/: CMakeLists.txt  Main.cpp  PlatformResetIntoQfil.cpp
ProductController/: AccessorySoftwareInstallManager.cpp  CLICmdsKeys.h  CMakeLists.txt  Clock.cpp  Clock.h  Configuration.xml  CustomChimeEvents.h  CustomProductAudioService.cpp  CustomProductAudioService.h  CustomProductController.cpp  CustomProductController.h  CustomProductHardwareInterface.cpp  CustomProductHardwareInterface.h  CustomProductLpmHardwareInterface.h  DataCollectionClientInterface.cpp  DataCollectionClientInterface.h  DeviceManager.cpp  DeviceManager.h  EddieProductController.cpp  EddieProductController.h  HelloWorldProductController.cpp  HelloWorldProductController.h  LpmInterface.cpp  LpmInterface.h  Main.cpp  Makedefs.mk  Makefile  PGCErrorCodes.h  ProductAdaptIQManager.cpp  ProductAdaptIQManager.h  ProductBLERemoteManager.cpp  ProductBLERemoteManager.h  ProductCecHelper.cpp  ProductCecHelper.h  ProductCliClient.cpp  ProductCliClient.h  ProductCommandLine.cpp  ProductCommandLine.h  ProductController.cpp  ProductController.h  (+12 more)
ProductController/AlertSubSystem/: AlertOutput.h  Alerts.cpp  Alerts.h  AlertsManager.cpp  AlertsManager.h  AlertsManagerAPI.h  AlertsMessage.cpp  AlertsMessage.h  AlertsScheduler.cpp  AlertsScheduler.h  AlertsSystemClient.cpp  AlertsSystemClient.h  AlsaAlertOutput.cpp  AlsaAlertOutput.h  CMakeLists.txt  DPrint.cpp  DPrint_.h  exe.cmake  main.cpp  mongoose.h  playAudio.cpp  playAudio.h  readme
ProductController/BatteryManager/: BatteryManager.cpp  BatteryManager.h
ProductController/CustomHsm/: CustomProductControllerState.cpp  CustomProductControllerState.h  CustomProductControllerStateAccessoryPairing.cpp  CustomProductControllerStateAccessoryPairing.h  CustomProductControllerStateAccessoryPairingCancelling.cpp  CustomProductControllerStateAccessoryPairingCancelling.h  CustomProductControllerStateAdaptIQ.cpp  CustomProductControllerStateAdaptIQ.h  CustomProductControllerStateAdaptIQCancelling.cpp  CustomProductControllerStateAdaptIQCancelling.h  CustomProductControllerStateAdaptIQSim.cpp  CustomProductControllerStateBooted.cpp  CustomProductControllerStateBooted.h  CustomProductControllerStateBooting.cpp  CustomProductControllerStateBooting.h  CustomProductControllerStateControlIntegration.cpp  CustomProductControllerStateControlIntegration.h  CustomProductControllerStateFirstBootGreetingTransition.cpp  CustomProductControllerStateFirstBootGreetingTransition.h  CustomProductControllerStateIdle.cpp  CustomProductControllerStateLowPowerResume.cpp  CustomProductControllerStateLowPowerResume.h  CustomProductControllerStateLowPowerStandby.cpp  CustomProductControllerStateLowPowerStandby.h  CustomProductControllerStateLowPowerStandbyTransition.cpp  CustomProductControllerStateLowPowerStandbyTransition.h  CustomProductControllerStateNetworkStandby.cpp  CustomProductControllerStateNetworkStandby.h  CustomProductControllerStateOn.cpp  CustomProductControllerStateOn.h  CustomProductControllerStatePlayable.cpp  CustomProductControllerStatePlayable.h  CustomProductControllerStatePlayableTransition.cpp  CustomProductControllerStatePlayableTransition.h  CustomProductControllerStatePlayableTransitionNetworkStandby.cpp  CustomProductControllerStatePlayableTransitionNetworkStandby.h  CustomProductControllerStatePlaying.cpp  CustomProductControllerStatePlaying.h  CustomProductControllerStatePlayingDeselected.cpp  CustomProductControllerStatePlayingDeselected.h  (+31 more)
ProductController/CustomProductAudioService/: CustomAudioSettingsManager.cpp  CustomAudioSettingsManager.h  CustomProductAudioService.cpp  CustomProductAudioService.h
ProductController/CustomProductKeyInputManager/: CustomProductKeyInputManager.cpp  CustomProductKeyInputManager.h
ProductController/CustomProductLpmHardwareInterface/: CustomProductLpmHardwareInterface.cpp  CustomProductLpmHardwareInterface.h
ProductController/CustomProductSTS/: CustomProductSTSAuxStateFactory.cpp  CustomProductSTSAuxStateFactory.h  CustomProductSTSStateTopAux.cpp  CustomProductSTSStateTopAux.h  ProductSTSAuxStateFactory.cpp  ProductSTSAuxStateFactory.h  ProductSTSStateTopAux.cpp  ProductSTSStateTopAux.h
ProductController/CustomSTSController/: ProductSTSStateDeviceControl.cpp  ProductSTSStateDeviceControl.h  ProductSTSStateTopAiQ.cpp  ProductSTSStateTopAiQ.h
ProductController/CustomStateMachine/: CustomProductControllerStateAdaptIQCancelling.h  CustomProductControllerStatePlayingSelected.cpp
ProductController/DeviceManager/: DeviceManager.cpp  DeviceManager.h
ProductController/DisplayController/: DisplayController.cpp  DisplayController.cpp.back  DisplayController.h  DisplayController.h.back
ProductController/Docs/: AUX_Playback_Class_Diagram.txt  AUX_Playback_Sequence_Diagram.txt  CustomProductControllerStateMachine.txt  EddieProductAppClassDiagram.txt  EddieStateMachine.txt  FrontDoorClientInterface.txt  ProductAppClassDiagram.txt  ProductAppHSM.txt  ProductAppStateMachine.txt
ProductController/FrontDoorClientInterface/: FrontDoorClientInterface.cpp  FrontDoorClientInterface.h
ProductController/Hsm/: ProductAppHsm.cpp  ProductAppHsm.h  ProductAppState.cpp  ProductAppState.h  ProductAppStateBooting.cpp  ProductAppStateBooting.h  ProductAppStateSetup.cpp  ProductAppStateSetup.h  ProductAppStates.h  (+6 more)
get-device-id/: CMakeLists.txt  get-device-id.cpp
(+3000 files in other folders)
