CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE(Settings.cmake)
PROJECT(Product)
ADD_SUBDIRECTORY(${RIVIERA_LPM_SERVICE_DIR} RivieraLpmService)
ADD_SUBDIRECTORY(${CASTLE_PRODUCT_CONTROLLER_COMMON_DIR} CastleProductControllerCommon)
ADD_SUBDIRECTORY(${A4VVIDEOMANAGER_DIR} A4VVideoManagerService)
ADD_SUBDIRECTORY(${A4VQUICKSET_DIR} A4VQuickSetService)
ADD_SUBDIRECTORY(ProductController)
ADD_SUBDIRECTORY(PtsServer)
