CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE(Settings.cmake)
PROJECT(Product)
ADD_SUBDIRECTORY(${PRODUCTCONTROLLERCOMMON_DIR} CastleProductControllerCommon)
ADD_SUBDIRECTORY(${A4VVIDEOMANAGER_DIR} A4VVideoManagerService)
ADD_SUBDIRECTORY(${A4VQUICKSET_DIR} A4VQuickSetService)
ADD_SUBDIRECTORY(${A4VREMOTECOMMUNICATIONSERVICE_DIR} A4VRemoteCommunicationService)
ADD_SUBDIRECTORY(ProductController)
ADD_SUBDIRECTORY(PtsServer)
