CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE(Settings.cmake)
PROJECT(Product)
ADD_SUBDIRECTORY(${PRODUCTCONTROLLERCOMMON_DIR} CastleProductControllerCommon)
ADD_SUBDIRECTORY(LpmUtils)
ADD_SUBDIRECTORY(ProductController)
ADD_SUBDIRECTORY(PtsServer)
ADD_SUBDIRECTORY(get-device-id)

IF(${SDK} STREQUAL "x86_64")
  ENABLE_TESTING()
  
  SET_TARGET_PROPERTIES(Professor PROPERTIES LINK_FLAGS --coverage)
  SET_SOURCE_FILES_PROPERTIES(KeyHandler.cpp PROPERTIES COMPILE_FLAGS --coverage)
  SET_SOURCE_FILES_PROPERTIES(KeyManager.cpp PROPERTIES COMPILE_FLAGS --coverage)

  ADD_TEST( test-KeyHandlerController ${OUTPUT_TEST_DIR}/KeyHandlerController )
ENDIF(${SDK} STREQUAL "x86_64")
