INCLUDE_DIRECTORIES(
  ${CASTLECLI_DIR}/include
  ${PRODUCTCONTROLLERCOMMON_DIR}
  ${PRODUCTCONTROLLERCOMMON_DIR}/ChimesController
  ${PRODUCTCONTROLLERCOMMON_DIR}/Hsm
  ${PRODUCTCONTROLLERCOMMON_DIR}/IntentHandler
  ${PRODUCTCONTROLLERCOMMON_DIR}/ProductAudioService
  ${PRODUCTCONTROLLERCOMMON_DIR}/ProductKeyInputManager
  ${PRODUCTCONTROLLERCOMMON_DIR}/ProductLpmHardwareInterface
  ${PRODUCTCONTROLLERCOMMON_DIR}/ProductSourceInfo
  ${PRODUCTCONTROLLERCOMMON_DIR}/ProductSoftwareInstallScheduler
  ${PRODUCTCONTROLLERCOMMON_DIR}/ProductSTSController
  ${DATACOLLECTIONCLIENT_DIR}
  ${KEYHANDLER_DIR}/include
  ${NETWORK_SERVICE_DIR}/include
  ${SOUNDTOUCH_SDK_DIR}/prebuilt/include/Bluetooth
  ${SOUNDTOUCH_SDK_DIR}/prebuilt/include/SoundTouchInterface
  ${AUDIOSOURCE_DIR}/include
  .
  CustomProductAudioService
  CustomProductKeyInputManager
  CustomProductLpmHardwareInterface
  CustomHsm
  CustomProductSTSController
  IntentHandler
)

# -----------------------------------------------------------------------------
# Professor daemon.

ADD_EXECUTABLE(Professor
  ${PROTO_CC_DEST}/AdaptIQ.pb.cc
  ${PROTO_CC_DEST}/AudioSettings.pb.cc
  ${PROTO_CC_DEST}/AudioFormat.pb.cc
  ${PROTO_CC_DEST}/CecMode.pb.cc
  ${PROTO_CC_DEST}/CommonIntents.pb.cc
  ${PROTO_CC_DEST}/HdmiEdid.pb.cc
  ${PROTO_CC_DEST}/Intents.pb.cc
  ${PROTO_CC_DEST}/KeyNames.pb.cc
  ${PROTO_CC_DEST}/ProductMessage.pb.cc
  ${PROTO_CC_DEST}/ProductSpeakerManager.pb.cc
  ${PROTO_CC_DEST}/ProductSTS.pb.cc
  ${PROTO_CC_DEST}/SystemInfo.pb.cc
  ${PROTO_CC_DEST}/SystemSourcesProperties.pb.cc
  ${PROTO_CC_DEST}/SystemPowerProduct.pb.cc
  ${PROTO_CC_DEST}/SystemPowerMacro.pb.cc
  ${PROTO_CC_DEST}/DataCollectionCecState.pb.cc
  ${PROTO_CC_DEST}/Kepler.pb.cc
  ${PROTO_CC_DEST}/KeyFilter.pb.cc
  AccessorySoftwareInstallManager.cpp
  CustomProductAudioService/CustomAudioSettingsManager.cpp
  CustomProductAudioService/CustomProductAudioService.cpp
  CustomProductKeyInputManager/CustomProductKeyInputManager.cpp
  CustomProductLpmHardwareInterface/CustomProductLpmHardwareInterface.cpp
  CustomHsm/CustomProductControllerStateAccessoryPairing.cpp
  CustomHsm/CustomProductControllerStateAccessoryPairingCancelling.cpp
  CustomHsm/CustomProductControllerStateAdaptIQ.cpp
  CustomHsm/CustomProductControllerStateAdaptIQCancelling.cpp
  CustomHsm/CustomProductControllerStateBooted.cpp
  CustomHsm/CustomProductControllerStateBooting.cpp
  CustomHsm/CustomProductControllerStateFirstBootGreetingTransition.cpp
  CustomHsm/CustomProductControllerStateIdle.cpp
  CustomHsm/CustomProductControllerState.cpp
  CustomHsm/CustomProductControllerStateOn.cpp
  CustomHsm/CustomProductControllerStateLowPowerResume.cpp
  CustomHsm/CustomProductControllerStateLowPowerStandbyTransition.cpp
  CustomHsm/CustomProductControllerStateNetworkStandby.cpp
  CustomHsm/CustomProductControllerStatePlayable.cpp
  CustomHsm/CustomProductControllerStatePlayableTransitionNetworkStandby.cpp
  CustomHsm/CustomProductControllerStatePlaying.cpp
  CustomHsm/CustomProductControllerStatePlayingSelected.cpp
  CustomHsm/CustomProductControllerStatePlayingSelectedSetup.cpp
  CustomHsm/CustomProductControllerStatePlayingSelectedSetupNetworkConfig.cpp
  CustomHsm/CustomProductControllerStateTop.cpp
  IntentHandler/AudioModeManager.cpp
  IntentHandler/BootupFactoryDefaultManager.cpp
  IntentHandler/IntentHandler.cpp
  IntentHandler/MuteManager.cpp
  IntentHandler/PlaybackRequestManager.cpp
  IntentHandler/RatingManager.cpp
  IntentHandler/SpeakerPairingManager.cpp
  ProductAdaptIQManager.cpp
  ProductBLERemoteManager.cpp
  ProductCecHelper.cpp
  ProductCommandLine.cpp
  ProductDspHelper.cpp
  ProductStart.cpp
  CustomSTSController/ProductSTSStateTopAiQ.cpp
  CustomSTSController/ProductSTSStateDeviceControl.cpp
  CustomProductController.cpp
)

TARGET_LINK_LIBRARIES(Professor
  CastleProductControllerCommon
  ProductControllerCommonProto
  DataCollectionClient
  LpmClient
  HttpInterface
  FrontDoorClient
  NetworkServiceUtils
  NetworkServiceClient
  KeyHandler
  BLESetupServiceProto
  BluetoothSinkServiceProto
  LightBarController
  VoiceServiceClient
  CliClient
  AudioLibs
  PassportClient
  GalapagosClient
  SASSFrontDoorServiceProto
  SoftwareUpdateAPI
  DeviceControllerClient
  STS
  STSClient
  uuid
  ShelbyUtils
  CommonTypes
  STSProtoBufs
  SoundTouch_SDK_Protobuf_static
  CapsUtils
  SystemEventService
  A4VRemoteCommClient
  A4VVideoManagerClient
  BoseLibs
  PassportLan
  SASSClient
  StsAmazon
  VoiceServiceClient
  ProtoToMarkup
  jsoncpp
  protobuf
  libwebsockets.a
  libssl.a
  libcrypto.a
  libTinyXml.a
  libz.a
  pthread
  rt
  cap
  dl
)

INSTALL(TARGETS Professor DESTINATION ${OUTPUT_BIN_DIR})

# -----------------------------------------------------------------------------
